GNOME Bugzilla – Bug 683397
"Remember password" option is not always saved
Last modified: 2012-09-07 12:33:52 UTC
Hi, testing empathy 3.5.91 with UOA. Here's one issue: 1) Select an existing non-oauth account (p.ex. icq) from the G-C-C 2) Edit options 3) Change the "Remember password" setting 4) Click on "Done" Expected outcome: - if the checkbox was previously unchecked, the password should now be stored into the signond DB - if the checkbox was saved, the password should be removed from the signond DB Actual outcome: Nothing happens on the signond DB. Note: the expected behaviour happens if the password field is also changed. Looks like the changes to the "remember password" checkbox alone do not trigger a commit.
Created attachment 223741 [details] [review] consider account widget has changed if the remember checkbox is changed
Created attachment 223742 [details] [review] delete the password if we are not supposed to remember it any more
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.