consider account widget has changed if the remember checkbox is changed

https://bugzilla.gnome.org/show_bug.cgi?id=683397